# codex

.github/workflows/: bazel.yml  kbdevs-release.yml  kbdevs-sync-upstream-release.yml  rust-ci-full.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  v8-canary.yml
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: .dockerignore  Cargo.toml  Dockerfile.bb-codex-ni-build
codex-rs/app-server/: README.md
codex-rs/app-server-daemon/src/: update_loop.rs
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server/src/: message_processor.rs
codex-rs/bb-codex-ni/: BUILD.bazel  Cargo.toml
codex-rs/bb-codex-ni/src/: main.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  main.rs
codex-rs/config/src/: config_toml.rs  permissions_toml.rs  profile_toml.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: client.rs  client_tests.rs  codex_thread.rs  exec.rs  network_proxy_loader_tests.rs  responses_retry.rs
codex-rs/exec/src/: cli.rs  cli_tests.rs  lib.rs
codex-rs/login/src/: lib.rs
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/protocol/src/: config_types.rs  models.rs
codex-rs/state/goals_migrations/: 0003_thread_goal_cyber_retries.sql
codex-rs/state/src/: lib.rs  runtime.rs
codex-rs/thread-manager-sample/src/: main.rs
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  app_server_session.rs  chatwidget.rs  cli.rs  lib.rs  npm_registry.rs  slash_command.rs  status_indicator_widget.rs  update_action.rs  (+3 more)
scripts/: install-kbdevs-codex.sh
(+134 files in other folders)
